# RustBitCaskDB

./: Cargo.toml
bitcask/active/: database.txt
src/: lib.rs  main.rs  main_test.rs
