[package]
name = "rust_bit_cask_db"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.2"

rand = "0.8.5"
chrono = "0.4.31"

dance_of_bytes = { git = "https://github.com/chetan2309/dance_of_bytes", version = "0.3.1" }